chore(composer): added authors block

--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,15 @@
   "description": "Yiicom content module",
   "keywords": ["yii2", "yiicom", "commerce"],
   "type": "yii2-extension",
+  "authors": [
+    {
+      "name": "Dmitriy Novikov",
+      "email": "dn@t1000.su"
+    }
+  ],
   "require": {
-    "yiicom/yiicom": "dev-master",
-    "yiicom/yiicom-files": "dev-master"
+    "yiicom/yiicom": "^1.0.0",
+    "yiicom/yiicom-files": "^1.0.0"
   },
   "autoload": {
     "psr-4": { "yiicom\\content\\": "src" }
